--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: YekanBakh, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   direction: rtl;
@@ -11,4 +11,75 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas,
     "Courier New", monospace;
+}
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: 100;
+  src: url("utils/fonts/Yekan/YekanBakhEN01Hairline.eot");
+  src: url("utils/fonts/Yekan/YekanBakhEN01Hairline.ttf")
+      format("woff"),
+    url("utils/fonts/Yekan/YekanBakhEN01Hairline.ttf")
+      format("truetype");
+}
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: 200;
+  src: url("utils/fonts/Yekan/YekanBakhEN02Thin.eot");
+  src: url("utils/fonts/Yekan/YekanBakhEN02Thin.woff")
+      format("woff"),
+    url("utils/fonts/Yekan/YekanBakhEN02Thin.ttf")
+      format("truetype");
+}
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: 300;
+  src: url("utils/fonts/Yekan/YekanBakhEN03Light.eot");
+  src: url("utils/fonts/Yekan/YekanBakhEN03Light.woff")
+      format("woff"),
+    url("utils/fonts/Yekan/YekanBakhEN03Light.ttf")
+      format("truetype");
+}
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: 400;
+  src: url("utils/fonts/Yekan/YekanBakhEN04Regular.eot");
+  src: url("utils/fonts/Yekan/YekanBakhEN04Regular.woff")
+      format("woff"),
+    url("utils/fonts/Yekan/YekanBakhEN04Regular.ttf")
+      format("truetype");
+}
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: 500;
+  src: url("utils/fonts/Yekan/YekanBakhEN05Medium.eot?v=970802");
+  src: url("utils/fonts/Yekan/YekanBakhEN05Medium.woff?v=970802")
+      format("woff"),
+    url("utils/fonts/Yekan/YekanBakhEN05Medium.ttf?v=970802")
+      format("truetype");
+}
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: 600;
+  src: url("utils/fonts/Yekan/YekanBakhEN06Bold.eot");
+  src: url("utils/fonts/Yekan/YekanBakhEN06Bold.woff")
+      format("woff"),
+    url("utils/fonts/Yekan/YekanBakhEN06Bold.ttf")
+      format("truetype");
+}
+
+@font-face {
+  font-family: YekanBakh;
+  font-style: normal;
+  font-weight: 800;
+  src: url("utils/fonts/Yekan/YekanBakhEN08Fat.eot");
+  src: url("utils/fonts/Yekan/YekanBakhEN08Fat.woff")
+      format("woff"),
+    url("utils/fonts/Yekan/YekanBakhEN08Fat.ttf")
+      format("truetype");
 }
