--- a/src/components/layout/dashboard/dashbord.css
+++ b/src/components/layout/dashboard/dashbord.css
@@ -26,3 +26,10 @@
   display: flex;
   justify-content: space-between;
 }
+.short-item {
+  margin: 10px;
+}
+.short-item .btn {
+  margin: 5px;
+  border-radius: 0px !important;
+}
