--- a/src/components/Pages/expertReqestProfile/ExpertProfile.css
+++ b/src/components/Pages/expertReqestProfile/ExpertProfile.css
@@ -5,7 +5,9 @@
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
     0 1px 2px 0 rgba(0, 0, 0, 0.06);
 }
-
+.filterBtn {
+  margin-bottom: 30px;
+}
 .card {
   position: relative;
   display: flex;
@@ -16,6 +18,10 @@
   background-clip: border-box;
   border: 0 solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
+}
+.filterBtn .btn-group-sm > .btn,
+.btn-sm {
+  border-radius: 0px;
 }
 
 .card-body {
